Additional test coverage. Fixed typos, grammar, Javadoc.