@@ -29,14 +29,57 @@ class OrderProcessorTest {
     }
 
     @Test
-    void places_order_in_ideal_storage_when_there_is_capacity() {
+    void places_order_in_ideal_hot_storage_when_there_is_capacity() {
         OrderProcessor processor = new OrderProcessor(dispatcher, 1, 1, 1);
 
         processor.place(createOrder("hot-1", "hot", 12, 30));
+        processor.pickup("hot-1");
 
         List<Action> actions = dispatcher.getActions();
-        assertEquals(1, actions.size());
-        assertAction(actions.getFirst(), "hot-1", Action.PLACE, Action.HEATER);
+        assertEquals(2, actions.size());
+        assertAction(actions.get(0), "hot-1", Action.PLACE, Action.HEATER);
+        assertAction(actions.get(1), "hot-1", Action.PICKUP, Action.HEATER);
+    }
+
+    @Test
+    void places_order_in_ideal_cold_storage_when_there_is_capacity() {
+        OrderProcessor processor = new OrderProcessor(dispatcher, 1, 1, 1);
+
+        processor.place(createOrder("cold-1", "cold", 12, 30));
+        processor.pickup("cold-1");
+
+        List<Action> actions = dispatcher.getActions();
+        assertEquals(2, actions.size());
+        assertAction(actions.get(0), "cold-1", Action.PLACE, Action.COOLER);
+        assertAction(actions.get(1), "cold-1", Action.PICKUP, Action.COOLER);
+    }
+
+    @Test
+    void order_cannot_be_picked_up_multiple_times() {
+        OrderProcessor processor = new OrderProcessor(dispatcher, 1, 1, 1);
+
+        processor.place(createOrder("cold-1", "cold", 12, 30));
+        processor.pickup("cold-1");
+        processor.pickup("cold-1");
+        processor.pickup("cold-1");
+
+        List<Action> actions = dispatcher.getActions();
+        assertEquals(2, actions.size());
+        assertAction(actions.get(0), "cold-1", Action.PLACE, Action.COOLER);
+        assertAction(actions.get(1), "cold-1", Action.PICKUP, Action.COOLER);
+    }
+
+    @Test
+    void places_order_in_ideal_room_storage_when_there_is_capacity() {
+        OrderProcessor processor = new OrderProcessor(dispatcher, 1, 1, 1);
+
+        processor.place(createOrder("room-1", "room", 12, 30));
+        processor.pickup("room-1");
+
+        List<Action> actions = dispatcher.getActions();
+        assertEquals(2, actions.size());
+        assertAction(actions.get(0), "room-1", Action.PLACE, Action.SHELF);
+        assertAction(actions.get(1), "room-1", Action.PICKUP, Action.SHELF);
     }
 
     @Test
@@ -53,7 +96,7 @@ class OrderProcessorTest {
     }
 
     @Test
-    void placing_cold_order_moves_hot_shelf_order_back_to_heater_when_possible() {
+    void placing_cold_order_moves_hot_shelf_hot_order_back_to_heater_when_possible() {
         OrderProcessor processor = new OrderProcessor(dispatcher, 1, 1, 1);
 
         processor.place(createOrder("hot-1", "hot", 12, 30));
@@ -91,6 +134,30 @@ class OrderProcessorTest {
     }
 
     @Test
+    void placing_room_temperature_order_moves_shelf_cold_order_when_both_heater_and_cooler_has_space() {
+        OrderProcessor processor = new OrderProcessor(dispatcher, 1, 1, 2);
+
+        processor.place(createOrder("cold-1", "cold", 10, 30));
+        processor.place(createOrder("hot-1", "hot", 20, 30));
+        processor.place(createOrder("cold-2", "cold", 11, 30));
+        processor.place(createOrder("hot-2", "hot", 21, 30));
+        processor.pickup("cold-1");
+        processor.pickup("hot-1");
+        processor.place(createOrder("room-1", "room", 9, 30));
+
+        List<Action> actions = dispatcher.getActions();
+        assertEquals(8, actions.size());
+        assertAction(actions.get(0), "cold-1", Action.PLACE, Action.COOLER);
+        assertAction(actions.get(1), "hot-1", Action.PLACE, Action.HEATER);
+        assertAction(actions.get(2), "cold-2", Action.PLACE, Action.SHELF);
+        assertAction(actions.get(3), "hot-2", Action.PLACE, Action.SHELF);
+        assertAction(actions.get(4), "cold-1", Action.PICKUP, Action.COOLER);
+        assertAction(actions.get(5), "hot-1", Action.PICKUP, Action.HEATER);
+        assertAction(actions.get(6), "cold-2", Action.MOVE, Action.COOLER);
+        assertAction(actions.get(7), "room-1", Action.PLACE, Action.SHELF);
+    }
+
+    @Test
     void discards_oldest_shelf_order_when_no_room_can_be_made() {
         OrderProcessor processor = new OrderProcessor(dispatcher, 1, 1, 3);
 
@@ -108,7 +175,24 @@ class OrderProcessorTest {
     }
 
     @Test
-    void pickup_discards_expired_order_from_its_current_storage() throws InterruptedException {
+    void discards_oldest_cold_shelf_order_when_no_room_can_be_made() {
+        OrderProcessor processor = new OrderProcessor(dispatcher, 1, 1, 3);
+
+        processor.place(createOrder("hot-1", "hot", 10, 100));
+        processor.place(createOrder("hot-2", "hot", 11, 15));
+        processor.place(createOrder("cold-1", "cold", 10, 100));
+        processor.place(createOrder("cold-2", "cold", 20, 4));
+        processor.place(createOrder("room-1", "room", 5, 6));
+        processor.place(createOrder("room-2", "room", 7, 60));
+
+        List<Action> actions = dispatcher.getActions();
+        assertEquals(7, actions.size());
+        assertAction(actions.get(5), "cold-2", Action.DISCARD, Action.SHELF);
+        assertAction(actions.get(6), "room-2", Action.PLACE, Action.SHELF);
+    }
+
+    @Test
+    void pickup_discards_expired_hot_order_from_heater() throws InterruptedException {
         OrderProcessor processor = new OrderProcessor(dispatcher, 1, 1, 1);
 
         processor.place(createOrder("hot-1", "hot", 12, 1));
@@ -122,11 +206,67 @@ class OrderProcessorTest {
     }
 
     @Test
+    void pickup_discards_expired_cold_order_from_cooler() throws InterruptedException {
+        OrderProcessor processor = new OrderProcessor(dispatcher, 1, 1, 1);
+
+        processor.place(createOrder("cold-1", "cold", 12, 1));
+        Thread.sleep(1200L);
+        processor.pickup("cold-1");
+
+        List<Action> actions = dispatcher.getActions();
+        assertEquals(2, actions.size());
+        assertAction(actions.get(0), "cold-1", Action.PLACE, Action.COOLER);
+        assertAction(actions.get(1), "cold-1", Action.DISCARD, Action.COOLER);
+    }
+
+    @Test
+    void pickup_discards_expired_cold_order_from_shelf() throws InterruptedException {
+        OrderProcessor processor = new OrderProcessor(dispatcher, 1, 1, 1);
+
+        processor.place(createOrder("cold-1", "cold", 11, 10));
+        processor.place(createOrder("cold-2", "cold", 22, 1));
+        Thread.sleep(1200L);
+        processor.pickup("cold-2");
+        processor.place(createOrder("cold-3", "cold", 33, 20));
+
+        List<Action> actions = dispatcher.getActions();
+        assertEquals(4, actions.size());
+        assertAction(actions.get(0), "cold-1", Action.PLACE, Action.COOLER);
+        assertAction(actions.get(1), "cold-2", Action.PLACE, Action.SHELF);
+        assertAction(actions.get(2), "cold-2", Action.DISCARD, Action.SHELF);
+        assertAction(actions.get(3), "cold-3", Action.PLACE, Action.SHELF);
+    }
+
+    @Test
     void pickup_of_missing_order_does_not_emit_any_action() {
         OrderProcessor processor = new OrderProcessor(dispatcher, 1, 1, 1);
 
         processor.pickup("missing");
 
         assertEquals(List.of(), dispatcher.getActions());
+    }
+
+    @Test
+    void mixed_pickup_of_existing_and_missing_orders() {
+        OrderProcessor processor = new OrderProcessor(dispatcher, 1, 1, 1);
+
+        processor.place(createOrder("cold-1", "cold", 11, 10));
+        processor.place(createOrder("cold-2", "cold", 22, 1));
+        processor.place(createOrder("hot-1", "hot", 33, 13));
+        processor.pickup("missing1");
+        processor.pickup("cold-2");
+        processor.pickup("missing2");
+        processor.pickup("cold-1");
+        processor.pickup("missing3");
+        processor.pickup("hot-1");
+
+        List<Action> actions = dispatcher.getActions();
+        assertEquals(6, actions.size());
+        assertAction(actions.get(0), "cold-1", Action.PLACE, Action.COOLER);
+        assertAction(actions.get(1), "cold-2", Action.PLACE, Action.SHELF);
+        assertAction(actions.get(2), "hot-1", Action.PLACE, Action.HEATER);
+        assertAction(actions.get(3), "cold-2", Action.PICKUP, Action.SHELF);
+        assertAction(actions.get(4), "cold-1", Action.PICKUP, Action.COOLER);
+        assertAction(actions.get(5), "hot-1", Action.PICKUP, Action.HEATER);
     }
 }
